Exc5/deploy_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end-api
spec:
  selector:
    app: back-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api
spec:
  selector:
    app: admin-back-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end
spec:
  selector:
    app: admin-front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
